--- a/src/components/AuthGuard.module.css
+++ b/src/components/AuthGuard.module.css
@@ -20,7 +20,7 @@
   display: none;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 1024px) {
   .imagePanel {
     display: block;
   }
